# land_battle_chess_server

./: .gitignore  Cargo.toml  README.md
data/: pieces.json  player2.json
src/: board_utils.rs  game_logic.rs  lib.rs  log_utils.rs  main.rs  types.rs
