[package]
name = "land-battle-chess-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aleo = "0.4.2"
aleo-rust = "0.4.2"
axum = {version ="0.6.18", features=["ws", "tokio"]}
axum-server = "0.5.1"
eyre = "0.6.8"
rand = "0.8.5"
serde = "1.0.163"
structopt = "0.3.26"
tokio = { version = "1.28.2", features = ["full"]}
